syntax = "proto3";
package Protocol;

import "Enum.proto";

message PacketHeader
{
	PacketType type = 1;
	int32 sessionId = 2;
}

message Vec3
{
	float x = 1;
	float y = 2;
	float z = 3;
}

message InputPayload
{
	oneof payload
	{
		MovePayload move = 1;
		AttackPayload attack = 2;
		DodgePayload dodge = 3;
	}
}

message MovePayload
{
	bool front = 1;
	bool back = 2;
	bool right = 3;
	bool left = 4;
	float camPitch = 5;
	float camYaw = 6;
	bool isRun = 7;
}

message AttackPayload
{

}

message DodgePayload
{

}